--- a/index.html
+++ b/index.html
@@ -5,12 +5,78 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Sass practic (Препроцессор)</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/css/style.css">
+	<title>JS_ls2</title>
+	<style>
+		.box1 {
+			width: 300px;
+			height: 300px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			background-color: red;
+		}
+
+		.box2 {
+			width: 150px;
+			height: 150px;
+			background-color: blue;
+		}
+
+		p {
+			margin: 10px;
+			color: white;
+		}
+	</style>
 </head>
 
 <body>
+	<!-- <button class="b-1">B-1</button> -->
+	<h1>Javascript Events</h1>
+	<!-- <div class="box1" id="1">
+		<div class="box2" id="2">
+		</div>
+	</div> -->
 
+	<!-- <a href="https://www.google.com/">Toogle</a> -->
+
+	<button id="alerts">Alert</button>
+
+	<button id="confirm">Confirm</button>
+	<div id="wrapper">
+		<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos, magni.</p>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, odit!</p>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, voluptates?</p>
+		<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem, eaque.</p>
+
+		<ul>
+			<li>1</li>
+			<li>2</li>
+			<li>3</li>
+		</ul>
+	</div>
+	<!-- <button class="knopka">Change text</button>
+	<input type="text"> -->
+	<!-- <a href="google.com" target="_blank" title="click my">Google</a>
+	<hr>
+	<div class="boxing"></div> -->
+	<!-- <p>Document object model</p>
+	<p class="text">Параграф с классом</p>
+	<p class="text">Ещё текст</p>
+	<hr>
+	<input type="text" value="input me">
+	<div id="playground">
+		<span>something text</span>
+		<ul>
+			<li>1</li>
+			<li>2</li>
+			<li>3</li>
+			<li>4</li>
+			<li>5</li>
+			<li>6</li>
+		</ul>
+	</div> -->
+	<script src="js/script.js" type="text/javascript"></script>
 </body>
 
 </html>
